[package]
name = "jenkins-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.11.10", features = [ "json"] }
anyhow = { version = "1.0.57", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
url = "2"
crossterm = "0.23.2"
once_cell = "1.10.0"